--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "boto3>=1.42.9",
+    "fastapi>=0.124.4",
     "minio>=7.2.20",
     "slack-sdk>=3.39.0",
+    "uvicorn>=0.38.0",
 ]
